Remove free response related fields and types
