# src/models/Poll.js
@@ -10,18 +10,18 @@ import Base from './Base';
 import Group from './Group';
 
 import type { APIPoll } from '../routers/v2/APITypes';
-import type { PollType, PollState } from '../utils/Constants';
+import type { PollState } from '../utils/Constants';
 
 import constants from '../utils/Constants';
 
 export type PollResult = {|
-  letter: ?string,
+  letter: string,
   text: string,
   count: ?number,
 |}
 
 export type PollChoice = {|
-  letter: ?string,
+  letter: string,
   text: string,
 |}
 
@@ -39,10 +39,6 @@ class Poll extends Base {
   @Column('character varying')
   text: string = '';
 
-  /** Type of poll either multipleChoice or freeResponse */
-  @Column('character varying')
-  type: PollType = constants.POLL_TYPES.MULTIPLE_CHOICE;
-
   /** Group the poll belongs to */
   @ManyToOne(type => Group, group => group.polls, { onDelete: 'CASCADE' })
   group: ?Group = null;
@@ -50,34 +46,22 @@ class Poll extends Base {
   /**
    * Choices for the poll
    * @example
-   * let answerChoices_mc = [{letter: "A", text: "Saturn", count: 5}]
-   * let answerChoices_fr = [{text: "Saturn", count: 10}]
+   * let answerChoices = [{letter: "A", text: "Saturn", count: 5}]
    */
   @Column('json')
   answerChoices: PollResult[] = undefined;
 
   /**
    * All the answers by students for the poll.
-   * Letter field is optional and only is returned on MC polls.
    * @example
-   * let answers_MC = {googleID: [{letter: "A", text: "Saturn"}]}
-   * let answers_FR = {googleID: [{text: "Saturn"}, {text: "Mars"}]}
+   * let answers = {googleID: [{letter: "A", text: "Saturn"}]}
    */
   @Column('json')
   answers: { string: PollChoice[] } = {};
 
   /**
-   * All the upvotes by students for the FR poll. Empty if MC.
-   * @example
-   * let upvotes_MC = {}
-   * let upvotes_FR = {googleID: [{text: "Saturn"}, {text: "Mars"}]}
-   */
-  @Column('json')
-  upvotes: { string: PollChoice[] } = {};
-
-  /**
-   * Correct answer choice for MC.
-   * Empty string if FR or no correct answer chosen for MC.
+   * Correct answer choice.
+   * Empty string if no correct answer chosen.
    * @example
    * let correctAnswer = 'A'
   */
@@ -96,7 +80,6 @@ class Poll extends Base {
       correctAnswer: this.correctAnswer,
       state: this.state,
       text: this.text,
-      type: this.type,
       userAnswers: this.answers,
     };
   }
